signals - switched to manual mode : all works - scheduling- script updated

--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -112,8 +112,8 @@ Algotrader | Today
             <div class="mb-3 card">
                 <div class="card-header">PERSONAL  LIST</div>
                 <div class="card-body personal-list-card-body">
-                    <div class="div-content">
-                        <table class="mb-0 table personal-tbl table-hover">
+                    <div class="div-content" style="width: auto;">
+                        <table class="mb-0 table personal-tbl table-hover" >
                             <thead>
                                 <tr>
                                     <th></th>
@@ -123,7 +123,7 @@ Algotrader | Today
                                     <th>Underprice(%)</th>
                                     <th>12M Momentum</th>
                                     <th>Beta</th>
-                                    <th>Max Intraday Drop %</th>
+                                    <th>Max Drop %</th>
                                 </tr>
                             </thead>
                             <tbody>
