ticker-info: news

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -130,31 +130,31 @@ Algotrader | Stock Info
                                     News
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a data-toggle="tab" href="#tab-analysts" class="nav-link show">
-                                    Analysts
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a data-toggle="tab" href="#tab-social" class="nav-link show">
-                                    Social
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a data-toggle="tab" href="#tab-insiders" class="nav-link show">
-                                    Insiders
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a data-toggle="tab" href="#tab-technical" class="nav-link show">
-                                    Technical
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a data-toggle="tab" href="#tab-fundamentals" class="nav-link show">
-                                    Fundamentals
-                                </a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a data-toggle="tab" href="#tab-analysts" class="nav-link show">-->
+<!--                                    Analysts-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a data-toggle="tab" href="#tab-social" class="nav-link show">-->
+<!--                                    Social-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a data-toggle="tab" href="#tab-insiders" class="nav-link show">-->
+<!--                                    Insiders-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a data-toggle="tab" href="#tab-technical" class="nav-link show">-->
+<!--                                    Technical-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a data-toggle="tab" href="#tab-fundamentals" class="nav-link show">-->
+<!--                                    Fundamentals-->
+<!--                                </a>-->
+<!--                            </li>-->
                         </ul>
                     </div>
                     <div class="card-body">
@@ -187,37 +187,37 @@ Algotrader | Stock Info
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane show" id="tab-analysts" role="tabpanel">
-                                <p>
-                                    srddddddddddddddddddddddddddddddd
-                                </p>
-                            </div>
-                            <div class="tab-pane show" id="tab-social" role="tabpanel">
-                                <p>
-                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-                                type specimen book. It has
-                                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                                </p>
-                            </div>
-                            <div class="tab-pane show" id="tab-insiders" role="tabpanel">
-                                <p>
-                                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                                software like Aldus PageMaker
-                                including versions of Lorem Ipsum.
-                                </p>
-                            </div>
-                            <div class="tab-pane show" id="tab-technical" role="tabpanel">
-                                <p>
-                                    errrrtjgkikikikikikikikikikikikikikikikikiki
-                                </p>
-                            </div>
-                            <div class="tab-pane show" id="tab-fundamentals" role="tabpanel">
-                                <p>
-                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-                                type specimen book. It has
-                                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                                </p>
-                            </div>
+<!--                            <div class="tab-pane show" id="tab-analysts" role="tabpanel">-->
+<!--                                <p>-->
+<!--                                    srddddddddddddddddddddddddddddddd-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                            <div class="tab-pane show" id="tab-social" role="tabpanel">-->
+<!--                                <p>-->
+<!--                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
+<!--                                type specimen book. It has-->
+<!--                                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                            <div class="tab-pane show" id="tab-insiders" role="tabpanel">-->
+<!--                                <p>-->
+<!--                                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing-->
+<!--                                software like Aldus PageMaker-->
+<!--                                including versions of Lorem Ipsum.-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                            <div class="tab-pane show" id="tab-technical" role="tabpanel">-->
+<!--                                <p>-->
+<!--                                    errrrtjgkikikikikikikikikikikikikikikikikiki-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                            <div class="tab-pane show" id="tab-fundamentals" role="tabpanel">-->
+<!--                                <p>-->
+<!--                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a-->
+<!--                                type specimen book. It has-->
+<!--                                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.-->
+<!--                                </p>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
