--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -63,7 +63,7 @@
             <!--            <div class="logo-src"></div>-->
             <div class="header__pane ml-auto">
                 <div>
-                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
+                    <button disabled type="button" class="hamburger close-sidebar-btn hamburger--elastic"
                             data-class="closed-sidebar">
                             <span class="hamburger-box">
                                 <span class="hamburger-inner"></span>
