--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -61,7 +61,7 @@
         {% if current_user.is_authenticated and current_user.confirmed%}
         <div class="app-header__logo">
             <!--            <div class="logo-src"></div>-->
-            <div class="header__pane ml-auto">
+            <div class="header__pane ms-auto">
                 <div>
                     <button disabled type="button" class="hamburger close-sidebar-btn hamburger--elastic"
                             data-class="closed-sidebar">
