--- a/app/templates/partial/ticket_info_news.html
+++ b/app/templates/partial/ticket_info_news.html
@@ -23,6 +23,11 @@
                                 </a>
                             </div>
                             <div class="text-small">{{d['publishedDate']}}</div>
+                            <div>
+                                <a href="{{d['url']}}" target="_blank" class="menu__link article-link">
+                                    Go to Article
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
