side bar self opening eliminated ?

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -331,6 +331,7 @@
 <script type="text/javascript">
             $.fn.bsModal = $.fn.modal.noConflict();
 </script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/arch_ui.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/base_app.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/semantic.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/tablesort.min.js') }}"></script>
