--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -145,6 +145,11 @@ Algotrader | Stock Info
                                     Insiders
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a data-toggle="tab" href="#tab-press-relises" class="nav-link show">
+                                    Press Relises
+                                </a>
+                            </li>
 <!--                            <li class="nav-item">-->
 <!--                                <a data-toggle="tab" href="#tab-technical" class="nav-link show">-->
 <!--                                    Technical-->
@@ -203,6 +208,14 @@ Algotrader | Stock Info
                             <div class="tab-pane show" id="tab-insiders" role="tabpanel">
                                 <div class="main-card mb-3 card">
                                     <div class="card-body tab-insiders-card" style="position: relative;">
+                                        <div class="div-content" ></div>
+                                        {% include 'layouts/loader.html' %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane show" id="tab-press-relises" role="tabpanel">
+                                <div class="main-card mb-3 card">
+                                    <div class="card-body tab-press-relises-card" style="position: relative;">
                                         <div class="div-content" ></div>
                                         {% include 'layouts/loader.html' %}
                                     </div>
