google integrated- need to finalyze

--- a/app/templates/account/login_new.html
+++ b/app/templates/account/login_new.html
@@ -35,6 +35,7 @@ Algotrader | LogIn
     <div class="login-container">
         <div class="login-grid">
             <h2 class="">Log in</h2>
+            <a class="button" href="/account/google_login">Google Login</a>
 
             {% set flashes = {
             'error': get_flashed_messages(category_filter=['form-error']),
