--- a/app/static/styles/login.css
+++ b/app/static/styles/login.css
@@ -290,6 +290,60 @@ input[type="checkbox"] {
     transition: border .1s ease,opacity .1s ease,transform .1s ease,box-shadow .1s ease,-webkit-transform .1s ease,-webkit-box-shadow .1s ease;
 }
 
+.social-field{
+    text-align: center;
+}
+
+.btn-google {
+    color: #545454;
+    background-color: #ffffff;
+    box-shadow: 0 1px 2px 1px #ddd;
+    border-radius: 2px;
+    text-transform: capitalize;
+    font-size: 15px;
+    padding: 10px 19px;
+    cursor: pointer;
+}
+
+.or-container {
+    align-items: center;
+    color: #ccc;
+    display: flex;
+    margin: 25px 0
+}
+
+.line-separator {
+    background-color: #ccc;
+    flex-grow: 5;
+    height: 1px
+}
+
+.or-label {
+    flex-grow: 1;
+    margin: 0 15px;
+    text-align: center
+}
+
+.terms-agree{
+    padding-top: 2%;
+    color: #2F327D;
+    -webkit-transition: color .1s ease;
+    transition: color .1s ease;
+    cursor: auto;
+    position: relative;
+    display: block;
+    padding-left: 3em;
+    outline: 0;
+    font-size: 12px;
+}
+.terms-agree .menu__link {
+    font-size: 12px;
+    font-weight: 600;
+    color: #2F327D;
+}
+
+
+
 
 @media only screen and (max-width: 767px){
 .form:not(.unstackable) .two.fields:not(.unstackable)>.field {
