--- a/app/static/styles/register.css
+++ b/app/static/styles/register.css
@@ -287,7 +287,8 @@ input[type="checkbox"] {
     transition: border .1s ease,opacity .1s ease,transform .1s ease,box-shadow .1s ease,-webkit-transform .1s ease,-webkit-box-shadow .1s ease;
 }
 
-[type=submit]:disabled, [type=submit].disabled, fieldset:disabled [type=submit] {
+[type=submit]:disabled, [type=submit].disabled, fieldset:disabled [type=submit],
+ .btn-google:disabled, .btn-google.disabled, fieldset:disabled .btn-google{
     pointer-events: none;
     opacity: 0.65;
 }
@@ -392,6 +393,40 @@ input[type="checkbox"] {
     -webkit-transition: .1s opacity ease;
     transition: .1s opacity ease;
     font-size: .75714286rem;
+}
+
+.btn-google {
+    color: #545454;
+    background-color: #ffffff;
+    box-shadow: 0 1px 2px 1px #ddd;
+    border-radius: 2px;
+    text-transform: capitalize;
+    font-size: 15px;
+    padding: 10px 19px;
+    cursor: pointer;
+}
+
+.or-container {
+    align-items: center;
+    color: #ccc;
+    display: flex;
+    margin: 25px 0
+}
+
+.line-separator {
+    background-color: #ccc;
+    flex-grow: 5;
+    height: 1px
+}
+
+.or-label {
+    flex-grow: 1;
+    margin: 0 15px;
+    text-align: center
+}
+
+.social-field{
+    text-align: center;
 }
 
 
