--- a/app/templates/account/register_new.html
+++ b/app/templates/account/register_new.html
@@ -54,7 +54,14 @@ Algotrader | Register
             {% for field in form | selectattr('type', 'equalto', 'SubmitField') %}
             {{ f.render_form_field(field) }}
             {% endfor %}
-
+            <div class="or-container">
+                <div class="line-separator"></div>
+                <div class="or-label">or</div>
+                <div class="line-separator"></div>
+            </div>
+            <div class="field social-field">
+                <a class="btn-google" href="/account/google_login"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Log In With Google</a>
+            </div>
             {{ f.end_form(form) }}
         </div>
     </div>
