--- a/app/templates/account/register_new.html
+++ b/app/templates/account/register_new.html
@@ -60,7 +60,7 @@ Algotrader | Register
                 <div class="line-separator"></div>
             </div>
             <div class="field social-field">
-                <a class="btn-google" href="/account/google_login/2"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Log In With Google</a>
+                <a class="btn-google" href="/account/google_login/{{subscription}}"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Log In With Google</a>
             </div>
             {{ f.end_form(form) }}
         </div>
