--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -43,11 +43,11 @@ Algotrader | Stock Info
                         Last Close: <span class="fmp-last-close"></span>
                     </div>
                     <div class="fmp-pne-eps">
-                        <div class="help-cursor" title="A high P/E ratio could mean that a company's stock is overvalued, or else that investors are expecting high growth rates in the future">
-                            P/E: <span class="fmp-pe font-weight-bold"></span>
+                        <div class="help-cursor">
+                            P/E <i class="fas fa-info-circle info-icon pl-1 pr-1" id="jb-info-4"></i> <span class="fmp-pe font-weight-bold"></span>
                         </div>
-                        <div class="help-cursor" title="A higher EPS indicates greater value">
-                            EPS: <span class="fmp-eps"></span>
+                        <div class="help-cursor">
+                            EPS <i class="fas fa-info-circle info-icon pl-1 pr-1" id="jb-info-3"></i> <span class="fmp-eps"></span>
                         </div>
                     </div>
                 </div>
