--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
 
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.css" rel="stylesheet">
     {% block styles %}{% endblock %}
 </head>
 
@@ -325,7 +326,8 @@
 </div>
 {% endif %}
 
-<script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/jquery.min.js') }}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script type="text/javascript">
@@ -337,6 +339,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/tablesort.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/packages/zxcvbn.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/base.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/jb-tooltip.js') }}"></script>
 <!--page specific script includes-->
 {% block scripting %}
 {% endblock %}
