--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -3,6 +3,7 @@
 {% block page_title %}
 Algotrader | Settings
 {% endblock %}
+
 {% macro user_info(user) %}
 <table class="ui compact definition table">
     <tr>
@@ -53,17 +54,15 @@ Algotrader | Settings
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="position-relative form-group">
-                                    <label for="algo_max_loss" class="">Max loss in %</label>
-                                    <input title="Maximal Loss for position. Will be sold by market price"
-                                           value="{{user_settings.algo_max_loss}}" name="algo_max_loss"
+                                    <label for="algo_max_loss" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" ></i>Max loss in % </label>
+                                    <input value="{{user_settings.algo_max_loss}}" name="algo_max_loss"
                                            id="algo_max_loss" type="text" class="form-control">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="position-relative form-group">
-                                    <label for="algo_take_profit" class="">Take profit in %</label>
-                                    <input title="Profit taker. At this profit trailing sell will be triggered with setted %"
-                                           value="{{user_settings.algo_take_profit}}" name="algo_take_profit"
+                                    <label for="algo_take_profit" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="Profit taker. At this profit trailing sell will be triggered with setted %"></i>Take profit in % </label>
+                                    <input value="{{user_settings.algo_take_profit}}" name="algo_take_profit"
                                            id="algo_take_profit" type="text"
                                            class="form-control">
                                 </div>
@@ -72,65 +71,67 @@ Algotrader | Settings
                         <div class="form-row">
                             <div class="col-md-6">
                                 <div class="position-relative form-group">
-                                    <label for="algo_bulk_amount_usd" class="">Bulk size in USD</label>
-                                    <input title="Maximal size of a bulk to buy"
-                                           value="{{user_settings.algo_bulk_amount_usd}}" name="algo_bulk_amount_usd"
+                                    <label for="algo_bulk_amount_usd" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="Maximal size of a bulk to buy"></i>Bulk size in USD </label>
+                                    <input value="{{user_settings.algo_bulk_amount_usd}}" name="algo_bulk_amount_usd"
                                            id="algo_bulk_amount_usd" type="text"
-                                           class="form-control"></div>
+                                           class="form-control">
+                                </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="position-relative form-group">
-                                    <label for="algo_trailing_percent" class="">Trail in %</label>
-                                    <input title="Trailing with this percent when Profit is taken"
-                                           value="{{user_settings.algo_trailing_percent}}" name="algo_trailing_percent"
+                                    <label for="algo_trailing_percent" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="Trailing with this percent when Profit is taken"></i>Trail in % </label>
+                                    <input value="{{user_settings.algo_trailing_percent}}" name="algo_trailing_percent"
                                            id="algo_trailing_percent" type="text"
-                                           class="form-control"></div>
+                                           class="form-control">
+                                </div>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-md-4">
                                 <div class="position-relative form-check">
-                                    <input title="Allow buying or only Stop/Profit"
+                                    <input
                                            {%if user_settings.algo_allow_buy%}
                                            checked
                                            {% endif %}
                                            name="algo_allow_buy" id="algo_allow_buy" type="checkbox"
                                            class="form-check-input">
                                     <label for="algo_allow_buy" class="form-check-label">Allow buying</label>
+                                    <i class="fas fa-info-circle info-icon jb-tooltip pl-1" title="Allow buying or only Stop/Profit"></i>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="position-relative form-check">
-                                    <input title="Allow selling"
+                                    <input
                                            {%if user_settings.algo_allow_sell%}
                                            checked
                                            {% endif %}
                                            name="algo_allow_sell" id="algo_allow_sell" type="checkbox"
                                            class="form-check-input">
                                     <label for="algo_allow_sell" class="form-check-label">Allow selling</label>
+                                    <i class="fas fa-info-circle info-icon jb-tooltip pl-1" title="Allow selling"></i>
                                 </div>
                             </div>
                             <div class="col-md-4">
 
                                 <div class="position-relative form-check">
-                                    <input title="Allow using margin for account or only personal cash"
+                                    <input
                                            {%if user_settings.algo_allow_margin%}
                                            checked
                                            {% endif %}
                                            name="algo_allow_margin" id="algo_allow_margin" type="checkbox"
                                            class="form-check-input">
                                     <label for="algo_allow_margin" class="form-check-label">Use margin for trade</label>
+                                    <i class="fas fa-info-circle info-icon jb-tooltip pl-1" title="Allow using margin for account or only personal cash"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="form-row pt-5">
                             <div class="col-md-4 input-group d-block">
                                 <div class="pb-2">
-                                    <label for="algo_portfolio_stoploss" class="form-check-label">Minimal NET allowed (Stop Loss):</label>
+                                    <label for="algo_portfolio_stoploss" class="form-check-label"><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="minimal amount  for account - if less, all positions will be closed"></i>Minimal NET allowed (Stop Loss):</label>
                                 </div>
                                 <div class="d-flex">
-                                     <input title="minimal amount  for account - if less, all positions will be closed"
-                                           value="{{user_settings.algo_portfolio_stoploss}}"
+                                     <input value="{{user_settings.algo_portfolio_stoploss}}"
                                            name="algo_portfolio_stoploss"
                                            id="algo_portfolio_stoploss" type="text"
                                            class="form-control">
@@ -138,7 +139,7 @@ Algotrader | Settings
                             </div>
                             <div class="col-md-4 input-group d-block">
                                 <div>
-                                    <label for="algo_positions_for_swan" class="">Market fall safety (Black Swan):</label>
+                                    <label for="algo_positions_for_swan" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="If during a day the S&P500 will fall lower than set - all the positions will be closed"></i>Market fall safety (Black Swan):</label>
                                 </div>
                                 <div class="d-flex">
                                     <input title="Close Positions on market drop"
@@ -150,8 +151,7 @@ Algotrader | Settings
                                                data-offstyle="off"
                                                name="algo_sell_on_swan" id="algo_sell_on_swan" type="checkbox"
                                                class="form-check-input">
-                                    <input title="If during a day the S&P500 will fall lower than set - all the positions will be closed"
-                                               value="{{user_settings.algo_positions_for_swan}}"
+                                    <input value="{{user_settings.algo_positions_for_swan}}"
                                                name="algo_positions_for_swan"
                                                id="algo_positions_for_swan" type="text"
                                                class="form-control blackswan-change">
@@ -167,10 +167,10 @@ Algotrader | Settings
                             </div>
                             <div class="col-md-4 input-group d-block">
                             <div>
-                                <label for="algo_max_hold_days" class="">Maximal holding period (days):</label>
+                                <label for="algo_max_hold_days" class=""><i class="fas fa-info-circle info-icon jb-tooltip pr-1" title="Sell if longer then configured perion and profit more than 2%"></i>Maximal holding period (days):</label>
                             </div>
                             <div class="d-flex">
-                                <input title="Sell if longer then configured perion and profit more than 2%"
+                                <input
                                            {%if user_settings.algo_apply_max_hold%}
                                            checked
                                            {% endif %}
@@ -180,7 +180,7 @@ Algotrader | Settings
                                            data-offstyle="off"
                                            type="checkbox"
                                            class="form-check-input">
-                                <input title="Maximal days" value="{{user_settings.algo_max_hold_days}}"
+                                <input value="{{user_settings.algo_max_hold_days}}"
                                            name="algo_max_hold_days" id="algo_max_hold_days" type="text"
                                            class="form-control">
                             </div>
