--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -177,7 +177,7 @@ Algotrader | Today
         <div class="ui menu">
             <div class="ui search item">
                 <div class="ui transparent icon input">
-                    <input id="search-users" type="text" placeholder="Search in all candidates">
+                    <input id="search-tickers" type="text" placeholder="Search in all candidates">
                     <i class="search icon"></i>
                 </div>
             </div>
