--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -413,6 +413,29 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     width: 100%;
 }
 
+.ui-menu .ui-menu-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.ui-menu .ui-menu-item:hover,
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+    border: none;
+    background: #6693bc !important;
+    font-weight: bold !important;
+    color: #ffffff;
+}
+
+.ui-menu-item .ui-menu-item-wrapper.ui-state-active{
+    border: none;
+}
+
 
 
 
