--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -413,9 +413,10 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     width: 100%;
 }
 
-.ui-menu .ui-menu-item {
+.ui-menu .ui-menu-item a{
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 
@@ -427,9 +428,9 @@ a.ui-button:active,
 .ui-button:active,
 .ui-button.ui-state-active:hover {
     border: none;
-    background: #6693bc !important;
+    background: rgb(249 250 251) !important;
     font-weight: bold !important;
-    color: #ffffff;
+    color: black !important;
 }
 
 .ui-menu-item .ui-menu-item-wrapper.ui-state-active{
